--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit" class="btn btn-success btn-block" value="Submit">Submit</button>
+                <button type="log" class="btn btn-success btn-block" value="Submit">Submit</button>
             </div>
 
         </div>
